apps/open-webui/env/k3s-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app.kubernetes.io/name: open-webui
spec:
  selector:
    app.kubernetes.io/name: open-webui
  type: LoadBalancer
  internalTrafficPolicy: Cluster
  loadBalancerIP: 192.168.10.202
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 8080
      name: web
